--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -83,7 +83,7 @@
 
                     <h1 class="mbr-section-title display-1">Julian A. Guas</h1>
                     <p class="mbr-section-lead lead">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; "I have autism, what's your superpower?"~ Anonymous</p>
-                    
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-black" href="biography.html">Biography</a> </div>
                 </div>
             </div>
         </div>
