--- a/biography.html
+++ b/biography.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="z4QnhhirkzdKEeIGA89vSxhB4hrFS9tJNDUdZjCa16PldvpDGQuBQZIiyUjoBuA4EKgT3xPifVYHHAfBf9oYmOb8orostE5aqCKR3nL0t/lG+VmUI6Iybdvbaxx0+Pgy" data-form-email="true">
+                        <input type="hidden" value="Ud6NK+DgSPIjjkpE9Xymn0apFDX00s+tHHgt5Sxhp8CNN0q2p/Eh+9mgcrQHru2gsZ7RiVFaubO5qj9vKSQ8sZD6F7e1K867TrJ7udBx6UbFAadIEDu5+Cd79ubsGy49" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -208,7 +208,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Ey2r5VLJI5a0MqcnM8Ia2c5Fx8NUt3iR+8AreG/dvxb6KoIy6A3AGlhk5GBSwPwXrN1/Fk7ivqSmwnX24QRazooea2QLyJXhQ7Mjt6pdvWCfaJdvAdAHSKq1ZS4SxwhL" data-form-email="true">
+                    <input type="hidden" value="ghEifmgdnkdmsgvjhyIWZMUiIA3GVQwbV9epyUkamFu1gXsssL7q8nX+O4u5V5XtnJ2EUPXZ5j6b13LsJhWwrBTqnHhP+ZydtJ4mHO/QBIuKUtxnVnn75MmspEVtTX8P" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
